[package]
name = "arbeitssklave"
version = "0.13.0"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Primitive actor framework with static dispatching only on top of `edeltraud` thread pool."
edition = "2021"

[dependencies]
edeltraud = { git = "https://github.com/swizard0/edeltraud.git", branch = "experiment_00" }

crossbeam = "^0.8"

log = "^0.4"
