[package]
name = "arbeitssklave"
version = "0.19.6"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Primitive actor framework with static dispatching only on top of `edeltraud` thread pool."
edition = "2021"

[dependencies]
edeltraud = { git = "https://github.com/swizard0/edeltraud.git" }

crossbeam = "^0.8"

log = "^0.4"
